# BasicProject

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  clean.bat  clean.sh  run.bat  run.sh
assets/: Example.sh  README.txt
